--- a/design.css
+++ b/design.css
@@ -8,15 +8,12 @@ body {
   }
   
 .footer {
-    display: flex;
-  justify-content: center;
+  display: flex;
   align-items: center;
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 72px;
-  background: #E5E7Eb
+  justify-content: center;
+  height: 50px;
+  background: #142937;
+  color: white;
 }
 
 ul {
@@ -106,7 +103,7 @@ button {
     justify-content: center;
 }
 .layer-4 {
-    background-color: #1f2937;
+    background-color: white;
     height: 300px;
     display: flex;
     align-items: center;
@@ -114,6 +111,36 @@ button {
     color: white;
     
 }
+
+.l4-c   {
+    background-color: #3882f6;
+    border-style: solid;
+    border-radius: 8px;
+    display: flex;
+    justify-content:center ;
+    align-items: center;
+    width: 800px;
+    height: 100px;
+}
+.l4-card {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    padding-right: 150px;
+}
+
+.l4-h {
+    font-size: large;
+    font-weight: bold;
+}
+
+.layer-4 button {
+    border-style: solid;
+    border-radius: 8px;
+    border-color: white;
+    border-width: 1px;
+}
+
 .text {
   color: #142937;
 }
@@ -161,3 +188,4 @@ button {
     font-weight: bold;
     text-align: right;
 }
+
